Fixed deprecation warnings in Java 17 & 21
Also set the gradle build to target Java 17